hard-gists/1df6d34cd1b2861eb6b7432ee7245ccd/run.log
=== Docker Run Log for 1df6d34cd1b2861eb6b7432ee7245ccd ===
Started at: Mi 29. Okt 12:47:23 CET 2025

[2025-10-29 12:47:24] START: Running container for 1df6d34cd1b2861eb6b7432ee7245ccd
[2025-10-29 12:47:24] SUCCESS: Container 3723154233ab818def118a65eb74a89811876cb878447be73fd026256a7e6bfb started for 1df6d34cd1b2861eb6b7432ee7245ccd
=== Container logs for 1df6d34cd1b2861eb6b7432ee7245ccd ===
  File "/snippet.py", line 20
    print "Exception in Reader:"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1df6d34cd1b2861eb6b7432ee7245ccd ===
[2025-10-29 12:47:26] INFO: Container 3723154233ab818def118a65eb74a89811876cb878447be73fd026256a7e6bfb has stopped
